--- a/VSProject/html/index.html
+++ b/VSProject/html/index.html
@@ -13,95 +13,11 @@
         <div class="inner-display" style="top: 0px"><h1>Seconds: <span id="label_secondcount"></span></h1></div>
         <div class="inner-display" style="top: 45px"><h1>FPS: <span id="label_fps"></span></h1></div>
         <div class="inner-display" style="top: 90px"><h1>Delta Time: <span id="label_deltatime"></span></h1></div>
-
-        <br />
-        <div class="inner-display" style="top: 90px"><h1>scrollbar hor: <span id="scrollbarHor"></span></h1></div>
-        <div class="inner-display" style="top: 90px"><h1>scrollbar ver: <span id="scrollbarVer"></span></h1></div>
-
-        <div class="inner-display" style="top: 90px"><h1>window bottom to doc top: <span id="winbottodoctop"></span></h1></div>
-
-
-        <br />
-        <div class="inner-display" style="top: 90px"><h1>rect X <span id="rectX"></span></h1></div>
-        <div class="inner-display" style="top: 90px"><h1>rect X <span id="rectY"></span></h1></div>
-
-        <div class="inner-display" style="top: 90px"><h1>Win X <span id="winX"></span></h1></div>
-        <div class="inner-display" style="top: 90px"><h1>Win Y <span id="winY"></span></h1></div>
-
-        <div class="inner-display" style="top: 90px"><h1>screen X <span id="screenX"></span></h1></div>
-        <div class="inner-display" style="top: 90px"><h1>screen Y <span id="screenY"></span></h1></div>
-
-        <!--
-
-        <div class="inner-display" style="top: 90px"><h1>Top to Document Top: <span id="toptotop"></span></h1></div>
-        <div class="inner-display" style="top: 90px"><h1>Top to Document Top: <span id="toptobot"></span></h1></div>
-
-        <br />
-        <div class="inner-display" style="top: 90px"><h1>DocSize: <span id="docsizeY"></span></h1></div>
-
-        <br />
-        <div class="inner-display" style="top: 90px"><h1>Doc to window top: <span id="doctowtop"></span></h1></div>
-        <div class="inner-display" style="top: 90px"><h1>Doc to window bot: <span id="doctowbot"></span></h1></div>
-        <br />
-        <div class="inner-display" style="top: 90px"><h1>Doc top to window top: <span id="doctoptowtop"></span></h1></div>
-        <div class="inner-display" style="top: 90px"><h1>Doc top top: <span id="doctoptotop"></span></h1></div>
-    <br />
-    <div class="inner-display" style="top: 90px"><h1>X: <span id="wx"></span></h1></div>
-    <div class="inner-display" style="top: 90px"><h1>Y: <span id="wy"></span></h1></div>
-    <br />
-    <div class="inner-display" style="top: 90px"><h1>Middle X: <span id="midx"></span></h1></div>
-    <div class="inner-display" style="top: 90px"><h1>Middle Y: <span id="midy"></span></h1></div>
-
-    <br />
-    <div class="inner-display" style="top: 90px"><h1>FixedTopLeft Top: <span id="label_ftlt"></span></h1></div>
-    <div class="inner-display" style="top: 90px"><h1>FixedTopLeft bottom: <span id="label_ftlb"></span></h1></div>
-    <div class="inner-display" style="top: 90px"><h1>FixedTopLeft Left: <span id="label_ftll"></span></h1></div>
-    <div class="inner-display" style="top: 90px"><h1>FixedTopLeft Right: <span id="label_ftlr"></span></h1></div>
-
-    <br />
-    <div class="inner-display" style="top: 90px"><h1>FixedTopRight Top: <span id="label_ftrt"></span></h1></div>
-    <div class="inner-display" style="top: 90px"><h1>FixedTopRight bottom: <span id="label_ftrb"></span></h1></div>
-    <div class="inner-display" style="top: 90px"><h1>FixedTopRight Left: <span id="label_ftrl"></span></h1></div>
-    <div class="inner-display" style="top: 90px"><h1>FixedTopRight Right: <span id="label_ftrr"></span></h1></div>
-
-    <br />
-    <div class="inner-display" style="top: 90px"><h1>fixedBottomLeft Top: <span id="label_bllt"></span></h1></div>
-    <div class="inner-display" style="top: 90px"><h1>fixedBottomLeft bottom: <span id="label_bllb"></span></h1></div>
-    <div class="inner-display" style="top: 90px"><h1>fixedBottomLeft Left: <span id="label_blll"></span></h1></div>
-    <div class="inner-display" style="top: 90px"><h1>fixedBottomLeft Right: <span id="label_bllr"></span></h1></div>
-
-    <br />
-    <div class="inner-display" style="top: 90px"><h1>FixedBottomRight Top: <span id="label_brlt"></span></h1></div>
-    <div class="inner-display" style="top: 90px"><h1>FixedBottomRight bottom: <span id="label_brlb"></span></h1></div>
-    <div class="inner-display" style="top: 90px"><h1>FixedBottomRight Left: <span id="label_brll"></span></h1></div>
-    <div class="inner-display" style="top: 90px"><h1>FixedBottomRight Right: <span id="label_brlr"></span></h1></div>
-    -->
     </div>
 
 
-    <div id="teste0" class="el_30x30"></div><br />
-    <div id="teste1" class="el_30x30 um"></div><br />
-    <div id="teste2" class="el_30x30 dois"></div><br />
-    <div id="teste3" class="el_30x30 tres"></div><br />
-
-    <div id="teste4" class="el_30x30"></div><br />
-    <div id="teste5" class="el_30x30"></div><br />
-    <div id="teste6" class="el_30x30"></div><br />
-    <div id="teste7" class="el_30x30"></div><br />
-
-    <div id="teste8" class="el_30x30"></div><br />
-    <div id="teste9" class="el_30x30"></div><br />
-    <div id="teste10" class="el_30x30"></div><br />
-    <div id="teste11" class="el_30x30"></div><br />
-
-    <div id="teste12" class="el_30x30"></div><br />
-    <div id="teste13" class="el_30x30"></div><br />
-    <div id="teste14" class="el_30x30"></div><br />
-    <div id="teste15" class="el_30x30"></div><br />
-
-    <div id="teste16" class="el_30x30"></div><br />
-    <div id="teste17" class="el_30x30"></div><br />
-    <div id="teste18" class="el_30x30"></div><br />
+    <div id="moveLoop" class="el_30x30"></div><br />
+    <div id="keyControlled" class="el_30x30"></div><br />
 </body>
 </html>
 <style>
@@ -111,9 +27,14 @@
 </script>
 
 <script>
-    _jaAfterLoadFuncs(function () { console.log('esta é uma funcao After Load'); });
-    _jaStart(function () { console.log('esta é uma funcao Start'); });
-    _jaAwake(function () { console.log('esta é uma funcao awake'); });
+    //_jaAfterLoadFuncs(function () { console.log('esta é uma funcao After Load'); });
+    //_jaStart(function () { console.log('esta é uma funcao Start'); });
+    //_jaAwake(function () { console.log('esta é uma funcao awake'); });
     //_jaUpdate(function () { console.log('esta é uma funcao Update acontece a cada refresh time do browser'); })
-    _jaFixedUpdate(function () { console.log('esta é uma funcao FixedUpdate acontece a cada 20ms se voce tiver processador pra isso'); })
+    //_jaFixedUpdate(function () { console.log('esta é uma funcao FixedUpdate acontece a cada 20ms se voce tiver processador pra isso'); })
+
+    
+
+
+
 </script>
