modified _jaTime.         SecondCount      to         secondCount added _jaTime.         doubleSecondCount         halfSecondCount         quartSecondCount         tenthSecondCount         minutCount         doubleMinutCount         halfMinutCount         tenthMinutCount

--- a/VSProject/html/FullDisplay.html
+++ b/VSProject/html/FullDisplay.html
@@ -168,7 +168,7 @@
 
     _jaUpdate(function () {
 
-        //document.getElementById("label_secondcount").innerText = _jaTime.SecondCount;
+        //document.getElementById("label_secondcount").innerText = _jaTime.secondCount;
         //document.getElementById("label_fps").innerText = _jaFrame.fps;
         //document.getElementById("label_deltatime").innerText = _jaTime.DeltaTime;
 
