--- a/VSProject/html/index.html
+++ b/VSProject/html/index.html
@@ -83,8 +83,8 @@
     var colorDealy = 0;
     _jaUpdate(function () {
 
-        if (colorDealy < _jaTime.SecondCount) {
-            colorDealy = _jaTime.SecondCount;
+        if (colorDealy < _jaTime.secondCount) {
+            colorDealy = _jaTime.secondCount;
             var colorNumber = '';
             for (var i = 0; i < 6; i++) {
                 colorNumber = (_jaMath.RandomRange(1, 3) <= 2) ? colorNumber.toString() + _jaMath.RandomRange(1, 9) : colorNumber.toString() + _jaMath.RandomLetter(1, 6);
