--- a/VSProject/html/index.html
+++ b/VSProject/html/index.html
@@ -26,7 +26,7 @@
 
 
 
-    <square id="moveLoop" class="el_30x30 layer-wall"></square><br />
+    <square id="moveLoop" class="layer-wall my-simple-asteroid" style="position: relative"></square><br />
     <square id="move2" class="el_30x30 layer-wall" style="left: 200px"></square><br />
     <square class="el_30x30 layer-palyer" style="background-color: darkblue"></square><br />
     <square class="el_30x30 layer-palyer" style="background-color: cyan"></square><br />
