Added file includer _include()

--- a/VSProject/html/index.html
+++ b/VSProject/html/index.html
@@ -73,8 +73,8 @@
 <script>
 
     _jaAwake(function () {
-            _include('html/ttt.css');
-            _include('html/ttt.js');
+            _include('ttt.css');
+            _include('ttt.js');
     });
 
     _jaAfterLoad(
