--- a/VSProject/html/index.html
+++ b/VSProject/html/index.html
@@ -7,10 +7,12 @@
 </head>
 <style></style>
 
-<body style="display: grid; place-items: center; place-content: center;">
-
+<body style="display: grid; place-items: center; place-content: center; overflow: hidden">
+    <div class="death-zone" style="position: absolute; width: 100%; height: 20px; background-color: red; left: 0; top: -100px"></div>
+    <div class="death-zone" style="position: absolute; width: 100%; height: 20px; background-color: red; left: 0; bottom: -50px"></div>
     <SceneObjects style="display:none">
-        <div id="bullet" class="roundEl layer-bullet"></div>
+        <div id="bullet" class="my-red-spaceship-main-shoot layer-bullet"></div>
+        <div id="bullet-secondary" class="my-red-spaceship-secondary-shoot layer-bullet"></div>
     </SceneObjects>
 
     <InfoPannel class="fps-display">
@@ -28,39 +30,19 @@
 
     <square id="moveLoop" class="layer-wall my-simple-asteroid" style="position: relative"></square><br />
     <square id="move2" class="el_30x30 layer-wall" style="left: 200px"></square><br />
-    <square class="el_30x30 layer-palyer" style="background-color: darkblue"></square><br />
-    <square class="el_30x30 layer-palyer" style="background-color: cyan"></square><br />
+    <square class="my-red-spaceship-shoot-debuff debuff-layer"></square><br />
+    <square class="my-red-spaceship-shoot-debuff debuff-layer"></square><br />
+    <square class="my-red-spaceship-shoot-debuff debuff-layer"></square><br />
+    <square class="my-red-spaceship-shoot-buff buff-layer"></square><br />
+    <square class="my-red-spaceship-shoot-buff buff-layer"></square><br />
+    <square class="my-red-spaceship-shoot-buff buff-layer"></square><br />
 
     <gameobjects>
-        <div id="player" class='my-red-spaceship-holder'>
-            <div class='spaceship-content'>
-                <div class='wings left'>
-                    <div class="inner"><div class="inner blue"></div></div>
-                </div>
-                <div class='ship-body'>
-                    <div class='exhaust-holder mini'>
-                        <div class='flame red mini'></div>
-                        <div class="flame orange mini"></div>
-                        <div class="flame yellow mini"></div>
-                        <div class="flame white mini"></div>
-                        <div class="circle blue mini"></div>
-                        <div class="circle darkred mini"></div>
-                    </div>
-                </div>
-                <div class='ship-body ship-layer2'>
-                    <div class="ship-upperbody">
-                        <div class="ship-cabin"></div>
-                        <div class="ship-arrow" style="padding: 15%; bottom: 24%"></div>
-                        <div class="ship-arrow" style="bottom: 10%"></div>
-                    </div>
-                </div>
-                <div class='wings right'>
-                    <div class="inner"><div class="inner blue"></div></div>
-                </div>
-            </div>
-        </div>
+        <div id="player" class='my-simple-spaceship' style="bottom: 0;"></div>
     </gameobjects>
 
+    <audio id="sfxShoot" src="../Dist/Framework/css/gameobjects/spaceship/mp3/shoot.mp3" type="audio/mpeg"></audio>
+    <audio id="sfxBackground" src="../Dist/Framework/css/gameobjects/spaceship/mp3/background.mp3" type="audio/mpeg" autoplay loop preload="auto"></audio>
 
 </body>
 </html>
@@ -79,11 +61,12 @@
 
     _jaAfterLoad(
         function () {
-
         }
     );
 
     _jaUpdate(function () {
+        _ja('#sfxBackground').play();
+
         let factor = 1 + _jaTime.secondCount * 0.01;
         let speed = 3;
         let backgroundY = parseInt(_ja('#move-bg').getAttribute('data-py'));
@@ -95,11 +78,15 @@
 
     var delay = 0;
     _jaUpdate(function () {
+        _jaCollisionDetector('square', ['.death-zone'], ['.layer-bullet'], function (a, b) { b.remove(); });
         
         _jaCollisionDetector('square', ['.layer-wall'], ['.layer-bullet'], function (a, b) { b.remove(); });
         _jaCollisionDetector('square', ['.layer-wall'], ['#player'], function (a, b) { console.log('damage player') } );
 
-        
+        _jaCollisionDetector('square', ['.buff-layer'], ['#player'], function (a, b) { a.remove(); addFireSpot(3); });
+        _jaCollisionDetector('square', ['.debuff-layer'], ['#player'], function (a, b) { a.remove(); subFireSpot(1); });
+
+
     });
 
 
