--- a/VSProject/html/index.html
+++ b/VSProject/html/index.html
@@ -43,7 +43,9 @@
 
     <audio id="sfxShoot" src="../Dist/Framework/css/gameobjects/spaceship/mp3/shoot.mp3" type="audio/mpeg"></audio>
     <audio id="sfxBackground" src="../Dist/Framework/css/gameobjects/spaceship/mp3/background.mp3" type="audio/mpeg" autoplay loop preload="auto"></audio>
-
+    <div style="position: fixed; top: 200px; left: 200px; width: 40px; height: 40px; z-index: 999; background-color: yellowgreen;">
+        <div></div>
+    </div>
 </body>
 </html>
 <style>
